fixed weird spacing and footer color issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -100,7 +100,7 @@
     padding: 0 10px 0 10px;
     font-family: 'Roboto', sans-serif;
     line-height: 60px;
-    font-size: 2.8em;
+    font-size: 1.6em;
     color: var(--black);
     display: block;
     height: 100%;
